<?xml version="1.0"?>
<package format="2">
  <name>serdp_gpmf</name>
  <version>0.0.1</version>
  <description>Tools to encode/decode sonar to GPMF</description>

  <maintainer email="amarburg@uw.edu">Aaron Marburg</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>g3log_catkin</depend>
  <depend>active_object</depend>
  <depend>liboculus</depend>
  <depend>gpmf</depend>

</package>
